@@ -30,7 +30,8 @@ Boolean options:
  -D   --dry         Dry run. Show test that would have run.
       --ext         Set the extension for tests (default '.t')
  -f,  --failures    Only show failed tests.
-      --fork        Fork to run harness in multiple processes
+      --fork        Fork to run harness in multiple processes.
+      --ignore-exit Ignore exit status from test scripts.
  -m,  --merge       Merge test scripts' STDERR with their STDOUT.
  -r,  --recurse     Recursively descend into directories.
       --reverse     Run the tests in reverse order.
