@@ -5,6 +5,9 @@ Revision history for Test-Harness
           rather than exit (#33609)
         - prove -r now recurses cwd rather than 't' by default (#33007)
         - restored --ext switch to prove (#33848)
+        - added ignore_exit option to TAP::Parser and corresponding
+          interfaces to TAP::Harness and Test::Harness. Requested for
+          Parrot.
 
 3.10    2008-02-26
         - fix undefined value warnings with bleadperl.
